--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-    <header>
+
+<HEAD>
+    <link rel="stylesheet" href="style.css">
+</HEAD>
+
+
+<header>
         <h1>Inteligencia Artificial</h1>
         <p>Explorando el futuro de la tecnología</p>
     </header>
