--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>
                 La Inteligencia Artificial (IA) es una rama de la informática que busca crear sistemas capaces de realizar tareas que requieren inteligencia humana, como el reconocimiento de voz, la toma de decisiones o la traducción de idiomas.
             </p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Artificial_Intelligence_%26_AI_%26_Machine_Learning_-_30212411048.jpg/640px-Artificial_Intelligence_%26_AI_%26_Machine_Learning_-_30212411048.jpg" alt="IA imagen" class="ai-image">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSotrnsdSdkoNXRtNodZuXSbEJ8cg6wdmMg3g&s" alt="IA imagen" class="ai-image">
         </section>
 
         <section id="tipos">
