--- a/index.html
+++ b/index.html
@@ -4,6 +4,78 @@
     <meta charset="UTF-8">
     <title>Inteligencia Artificial</title>
     <link rel="stylesheet" href="style.css">
+       <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #e3f2fd;
+      color: #0d47a1;
+    }
+
+    header {
+      background-color: #1565c0;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #0d47a1;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    section {
+      padding: 50px 20px;
+    }
+
+    .section-light {
+      background-color: #bbdefb;
+    }
+
+    .btn {
+      background-color: #1976d2;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 15px;
+    }
+
+    .btn:hover {
+      background-color: #1565c0;
+    }
+
+    footer {
+      background-color: #0d47a1;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    input, textarea {
+      width: 100%;
+      max-width: 500px;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #90caf9;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 
 <body>
